--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,6 @@
   "dependencies": {
     "paper-button": "PolymerElements/paper-button#^1.0.0",
     "polymer": "Polymer/polymer#^1.0.0",
-    "font-roboto": "Polymer/font-roboto#~0.5.6"
+    "font-roboto": "Polymer/font-roboto"
   }
 }
